fix: rendering message if there aren't initiated or awaiting response trades, implemented validity check on the update trade api, moved the modal a little to the top because the submit button was not showing on the screen

--- a/catchemall/ui/src/styles/modal.css
+++ b/catchemall/ui/src/styles/modal.css
@@ -2,7 +2,7 @@
     position: fixed;
     min-width: 600px;
     min-height: 400px;
-    top: 20%;
+    top: 13%;
     left: 40%;
     margin: auto;
     display: flex;
